# SemantIQ

./: .env.example  .gitignore  .zenodo.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_POLICY.md  SECURITY.md  docker-compose.cloud.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_integrity_report.yml  02_methodology_question.yml  03_bug_report.yml  04_ethical_concern.yml  config.yml
.github/workflows/: cd.yml  ci.yml  governance_reminder.yml  publish.yml
adapters/: README.md  __init__.py  base.py  dummy.py  dummy_vision.py  marber_adapter.py  openai_adapter.py  openrouter_adapter.py
backend/: Dockerfile.prod
benchmarks/: README.md  schema.py  scoring.py  smf_example.yaml
benchmarks/hacs/: README.md  calibration.py  (+3 more)
cli/: README.md  hacs_commands.py  main.py  ops_commands.py  research_commands.py  smf_commands.py  ui_commands.py  vision_commands.py
config/: config.yaml
core/: settings.py
datasets/: README.md  code_writer_v1.json
docs/: advanced_usage.md  architecture.md  benchmarks.md  file_formats.md  logging_design.md  modules.md  pipeline.md  privacy_overview.md  providers.md  release_guide.md  responsible_release.md  security_overview.md
examples/: config.toml  config.yaml
frontend/: Dockerfile.prod  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
outputs/: run_gemini.jsonl  scores_gemini.jsonl
pipeline/: README.md  cache.py  engine.py  loader.py  registry.py  runner.py  schema.py
prompts/: README.md
scripts/: generate_env.py  migrate_jsonl_to_db.py  validate_benchmarks.py
tests/: test_adapters.py  test_core_scoring.py  test_dataset_exporter.py  test_grok_provider.py  test_human_jsonl.py  test_llm_evaluator.py  test_openai_provider.py  test_pipeline.py  test_schema.py  test_schemas.py  test_storage_readers.py
webapp/: README.md  index.html  package-lock.json  package.json  vite.config.ts
worker/: Dockerfile.prod
(+261 files in other folders)
