[project]
name = "semantiq-m-benchmarks"
version = "0.1.0"
description = "Open-Source LLM Benchmark Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer",
    "pydantic",
    "requests",
    "httpx",
    "rich"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cli", "adapters", "pipeline"]
